--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -115,6 +115,11 @@ body {
   }
 
   .chart-container {
+    span {
+      &.theme--light {
+        background-color: $deep-gray;
+      }
+    }
     &.theme--light {
       background-color: $deep-gray;
     }
