--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -1,11 +1,15 @@
 .social-media {
   width: 100%;
   display: flex;
+  input {
+    display: none;
+  }
   .social-media__list {
     list-style: none;
     width: 100%;
+    height: fit-content;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(255px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(20%, 1fr));
     grid-template-rows: repeat(auto-fit, minmax(122px, 1fr));
     column-gap: 20px;
     row-gap: 20px;
@@ -16,10 +20,9 @@
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
-      width: 255px;
+      width: 100%;
       height: 216px;
       border-radius: 5px;
-      border-top: 5px solid $youtube;
       background-color: $dark-desaturated-blue;
       transition: all ease-in-out .2s;
       &:hover{
@@ -60,19 +63,24 @@
         font-size: $textXsm;
         color: $lime-green;
         font-weight: 700;
+        &.down {
+          color: $youtube;
+        }
       }
     }
   }
+  
 }
 
 @include mediumScreen {
   .social-media {
     .social-media__list {
-      column-gap: 20px;
-      row-gap: 20px;
+      grid-template-columns: repeat(auto-fit, minmax(40%, 1fr));
+      column-gap: 10px;
+      row-gap: 10px;
       .social-media__card {
         padding: 15px;
-        width: 255px;
+        width: 100%;
         height: fit-content;
       }
     }
@@ -82,12 +90,11 @@
 @include mobileScreen {
   .social-media {
     .social-media__list {
-      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
       .social-media__card {
-        padding: 15px;
-        width: 150px;
-        min-height: 150px;
-        height: fit-content;
+        padding: 10px;
+        width: 100%;
+        min-height: 120px;
         .card-header{
           width: 100%;
         }
