--- a/src/css/main.css
+++ b/src/css/main.css
@@ -30,7 +30,7 @@ body {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     display: none; }
@@ -384,6 +384,7 @@ body {
     padding: 20px 50px 50px 50px;
     margin: auto;
     height: 65%;
+    min-height: 300px;
     width: 100%;
     border-radius: 15px; }
     .modal-container .chart__container span {
