--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -61,7 +61,7 @@ body {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     display: none;
