--- a/src/scss/_chart.scss
+++ b/src/scss/_chart.scss
@@ -111,6 +111,7 @@
     padding: 20px 50px 50px 50px;
     margin: auto;
     height: 65%;
+    min-height: 300px;
     width: 100%;
     border-radius: 15px;
     canvas {
