--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -54,7 +54,7 @@ body {
   .container{
     display: flex;
     flex-direction: column;
-    padding: 0 165px;
+    padding: 0 165px 65px 165px;
     height: 100%;
   }
   .overlay {
@@ -74,7 +74,7 @@ body {
       height: 15%;
     }
     .container{
-      padding: 0 80px;
+      padding: 0 80px 40px 80px;
     }
   }
 }
