--- a/src/css/main.css
+++ b/src/css/main.css
@@ -42,6 +42,8 @@ body {
     padding: 0 80px 40px 80px; } }
 
 @media screen and (max-width: 576px) {
+  body .split-background {
+    height: 20%; }
   body .container {
     padding: 0 40px 40px 40px; } }
 
@@ -90,6 +92,7 @@ body {
       background: linear-gradient(#378fe6 0%, #3eda82 100%);
       height: 25px;
       width: 48px;
+      min-width: 48px;
       border-radius: 50px;
       margin-left: 14px; }
       .header .color-mode .color-mode__switch .color-mode__switch--circle {
