--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -31,6 +31,7 @@
       background: linear-gradient(hsl(210, 78%, 56%) 0%, hsl(146, 68%, 55%) 100%);
       height: 25px;
       width: 48px;
+      min-width: 48px;
       border-radius: 50px;
       margin-left: 14px;
       .color-mode__switch--circle{
