--- a/src/scss/_overview.scss
+++ b/src/scss/_overview.scss
@@ -127,7 +127,7 @@
           grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
           .overview__sm--card {
             padding: 15px;
-            height: fit-content;
+            height: 80px;
           }
         }
       }
